--- a/diagrams/package.json
+++ b/diagrams/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.8.4",
+    "@emotion/core": "^10.0.28",
     "@projectstorm/react-diagrams": "^6.0.1-beta.7",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -142,5 +143,15 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@emotion/styled": "^10.0.27",
+    "@projectstorm/react-canvas-core": "^6.0.2",
+    "closest": "0.0.1",
+    "dagre": "^0.8.5",
+    "mathjs": "^6.6.1",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.10",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
