--- a/diagrams/package.json
+++ b/diagrams/package.json
@@ -151,6 +151,7 @@
     "closest": "0.0.1",
     "dagre": "^0.8.5",
     "mathjs": "^6.6.1",
+    "node-sass": "^4.13.1",
     "pathfinding": "^0.4.18",
     "paths-js": "^0.4.10",
     "resize-observer-polyfill": "^1.5.1"
