--- a/diagrams/tsconfig.json
+++ b/diagrams/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -13,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": false,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "React",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
