Custom node working from demogallery, time to make my own

--- a/diagrams/tsconfig.json
+++ b/diagrams/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "strictNullChecks": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -15,7 +16,7 @@
     "isolatedModules": false,
     "noEmit": true,
     "jsx": "React",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
